samples/_failures_safe/1761182444_465f7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5904ef3.c: In function ‘main’:
./samples/SAFE/__tmp_d5904ef3.c:149:9: error: expected declaration or statement at end of input
  149 |         }
      |         ^
./samples/SAFE/__tmp_d5904ef3.c:149:9: error: expected declaration or statement at end of input
